--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 	<title>shn</title>
 </head>
 
+<script type="text/javascript">var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://");document.write(unescape("%3Cspan id='cnzz_stat_icon_1258926714'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s11.cnzz.com/z_stat.php%3Fid%3D1258926714%26show%3Dpic' type='text/javascript'%3E%3C/script%3E"));</script>
+
 <body>
 <style type="text/css">
 	*{
