--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 <div id="one">
 	网站建设中...
 	-cnzz-
+	<input type="button" value="fant" onclick="location.href='http://www.sunhaonan.com/wait'"></input>
 </div>
 	
 </body>
