--- a/index.html
+++ b/index.html
@@ -3,27 +3,51 @@
 <head>
 	<meta charset="UTF-8">
 	<title>shn</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="Shortcut Icon" href="favicon.ico" type="image/x-icon" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+
 </head>
 
-<script type="text/javascript">var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://");document.write(unescape("%3Cspan id='cnzz_stat_icon_1258926714'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s11.cnzz.com/z_stat.php%3Fid%3D1258926714%26show%3Dpic' type='text/javascript'%3E%3C/script%3E"));</script>
-
 <body>
-<style type="text/css">
-	*{
-		margin: 0;
-		padding: 0;
-	}
-	#one{
-		margin: 0 auto;
-		text-align: center;
-		line-height: 25em;
-	}
-</style>
-<div id="one">
-	网站建设中...
-	-cnzz-
-	<input type="button" value="fant" onclick="location.href='http://www.sunhaonan.com/wait'"></input>
-</div>
+<div class="top">
 	
+</div>
+
+<div class="mid">
+	<h1>网站建造中</h1>
+	<!-- <input type="button" value="" onclick="location.href='http://www.sunhaonan.com/wait'"></input> -->
+</div>
+
+<div class="bottom">
+	<div id="footer">
+		<p>design by shn</p>
+	</div>
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div style="display: none;">
+	<script type="text/javascript">
+	var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://");document.write(unescape("%3Cspan id='cnzz_stat_icon_1258926714'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s11.cnzz.com/z_stat.php%3Fid%3D1258926714%26show%3Dpic' type='text/javascript'%3E%3C/script%3E"));
+	</script>
+</div>
+<script type="text/javascript">
+	window.onload = function(){
+		var h = window.screen.height
+		document.body.style.height = h+'px';
+		//window.innerHeight+'px';  
+		//body.height(h);
+	};
+</script>
 </body>
 </html>
