--- a/index.html
+++ b/index.html
@@ -2,55 +2,53 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>shn</title>
+	<title>盐田图书馆智能取号系统</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
-	<link rel="Shortcut Icon" href="favicon.ico" type="image/x-icon" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-
-</head>
-
-<body>
-<div class="top">
+	<script type="text/javascript" src="js/jquery-1.12.1.js"></script>
 	
-</div>
-
-<div class="mid">
-	<h1>网站建造中</h1>
-	<!-- <input type="button" value="" onclick="location.href='http://www.sunhaonan.com/wait'"></input> -->
-</div>
-
-<div class="bottom">
-	<div id="footer">
-		<p>design by shn</p>
+</head>
+<body>
+	<div class="box">
+		<h1>盐田图书馆智能取号系统</h1>
+		<h3>YANTIAN&nbsp;LIBRARY&nbsp;INTELLIGENT&nbsp;TICKET&nbsp;SYATEM</h3>
 	</div>
-</div>
+	<!-- 标题 -->
 
+	<div class="banner">
+			<img src="images/banner.png">
+	</div>
+	<!-- 影院大图 -->
 
+	<div class="but_box">
+		<p><span>4D电影</span></p>
+		<p><span>海洋馆</span></p>
+		<p><span>智慧坐席</span></p>
+		<p><span>视听室</span></p>
+	</div>
+	<!-- 按钮 -->
 
-
-
-
-
-
-
-
-<div style="display:none;">
-	<script language="javascript" type="text/javascript" src="http://js.users.51.la/18852966.js"></script>
-        <noscript><a href="http://www.51.la/?18852966" target="_blank"><img alt="&#x6211;&#x8981;&#x5566;&#x514D;&#x8D39;&#x7EDF;&#x8BA1;" src="http://img.users.51.la/18852966.asp" style="border:none" /></a></noscript>
-</div>
-
-<div style="display: none;">
-	<script type="text/javascript">
-	var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://");document.write(unescape("%3Cspan id='cnzz_stat_icon_1258926714'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s11.cnzz.com/z_stat.php%3Fid%3D1258926714%26show%3Dpic' type='text/javascript'%3E%3C/script%3E"));
-	</script>
-</div>
-<script type="text/javascript">
-	window.onload = function(){
-		var h = window.screen.height
-		document.body.style.height = h+'px';
-		//window.innerHeight+'px';  
-		//body.height(h);
-	};
-</script>
+	<div class="footimg">
+		<ul>
+			<li><img src="images/sea.png"><span>海洋馆</span></li>
+			<li><img src="images/set.png"><span>智慧坐席</span></li>
+			<li><img src="images/see.png"><span>视听室</span></li>
+		</ul>
+	</div>
+	<!-- 底部图片 -->
 </body>
+<script type="text/javascript">
+	$(function(){
+		var wid = $("body").width();
+		$("body").height(wid*1.78);
+		//宽高比例
+		
+
+
+		
+		
+
+
+	})
+</script>
+
 </html>
