--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>shn</title>
-	<link rel="stylesheet" type="text/css" href="../css/style.css">
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="Shortcut Icon" href="favicon.ico" type="image/x-icon" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
 </head>
@@ -13,17 +13,10 @@
 <div class="box">
 	<h1>网站建造中</h1>
 </div>
-<!-- a -->
-<div style="display: none;">
-	
-</div>
-<!-- b -->
+
 <div id="footer">
 	<p>design by shn</p>
 </div>
-<!-- c -->
-
-
 
 <div style="display: none;">
 	<script type="text/javascript">
@@ -32,14 +25,5 @@
 	<script language="javascript" type="text/javascript" src="http://js.users.51.la/18852966.js"></script>
 	<noscript><a href="http://www.51.la/?18852966" target="_blank"><img alt="&#x6211;&#x8981;&#x5566;&#x514D;&#x8D39;&#x7EDF;&#x8BA1;" src="http://img.users.51.la/18852966.asp" style="border:none" /></a></noscript>
 </div>
-
-<script type="text/javascript">
-	window.onload = function(){
-		//var h = window.screen.height
-		//document.body.style.height = h+'px';
-		//window.innerHeight+'px';  
-		//body.height(h);
-	};
-</script>
 </body>
 </html>
