--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 <head>
 	<meta charset="UTF-8">
 	<title>shn</title>
-	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<!-- <link rel="stylesheet" type="text/css" href="css/style.css"> -->
 	<link rel="Shortcut Icon" href="favicon.ico" type="image/x-icon" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
 </head>
 
 <body>
-
+	<h2 style="text-align:center;">better</h2>
+<!-- 
 <div class="box">
 	<h1>网站建造中</h1>
 </div>
@@ -17,7 +18,7 @@
 <div id="footer">
 	<p>design by shn</p>
 </div>
-
+ -->
 <div style="display: none;">
 	<script type="text/javascript">
 	var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://");document.write(unescape("%3Cspan id='cnzz_stat_icon_1258926714'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s11.cnzz.com/z_stat.php%3Fid%3D1258926714%26show%3Dpic' type='text/javascript'%3E%3C/script%3E"));
