--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 </head>
 
 <body>
-<h2 style="text-align:center;">better</h2>
+<b style="text-align:center;font-size:23px;">
+	better better better better better better better better better better better better better better better better better better better better better better better better better better better better better better 
+	</b>
 <div style="display: none;">
 	<script type="text/javascript">
 	var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://");document.write(unescape("%3Cspan id='cnzz_stat_icon_1258926714'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s11.cnzz.com/z_stat.php%3Fid%3D1258926714%26show%3Dpic' type='text/javascript'%3E%3C/script%3E"));
