--- a/index.html
+++ b/index.html
@@ -1,32 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8">
+	<!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+	<meta name="description" content="sunhaonan">
 	<title>shn</title>
 	<!-- <link rel="stylesheet" type="text/css" href="css/style.css"> -->
-	<link rel="Shortcut Icon" href="favicon.ico" type="image/x-icon" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+	<style>
+		body{
+			height: 2000px;
+			background: #43C6AC;  /* fallback for old browsers */
+			background: -webkit-linear-gradient(to right, #191654, #43C6AC);  /* Chrome 10-25, Safari 5.1-6 */
+			background: linear-gradient(to right, #191654, #43C6AC); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+		}
+		#box{
+			display: flex;
+			justify-content: center;
+			text-align: center;
+			padding-top: 10%;
+			color: #fff;
+			text-shadow: 0 0 10px #191654;
+		}
+	</style>
 </head>
-  <body>
-<b style="text-align:center;font-size:23px;">
-	better better better better better better better better better better better better better better better better better better better better better better better better better better better better better better 
-	better better better better better better better better better better better better better better better better better better better better better better better better better better better better better better 
-	better better better better better better better better better better better better better better better better better better better better better better better better better better better better better better 
-	better better better better better better better better better better better better better better better better better better better better better better better better better better better better better better 
-	better better better better better better better better better better better better better better better better better better better better better better better better better better better better better better 
-	better better better better better better better better better better better better better better better better better better better better better better better better better better better better better better 
-	better better better better better better better better better better better better better better better better better better better better better better better better better better better better better better 
-	better better better better better better better better better better better better better better better better better better better better better better better better better better better better better better 
-	better better better better better better better better better better better better better better better better better better better better better better better better better better better better better better 
-	better better better better better better better better better better better better better better better better better better better better better better better better better better better better better better 
-	
-	</b>
-<div style="display: none;">
-	<script type="text/javascript">
-	var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://");document.write(unescape("%3Cspan id='cnzz_stat_icon_1258926714'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s11.cnzz.com/z_stat.php%3Fid%3D1258926714%26show%3Dpic' type='text/javascript'%3E%3C/script%3E"));
-	</script>
-	<script language="javascript" type="text/javascript" src="http://js.users.51.la/18852966.js"></script>
-	<noscript><a href="http://www.51.la/?18852966" target="_blank"><img alt="&#x6211;&#x8981;&#x5566;&#x514D;&#x8D39;&#x7EDF;&#x8BA1;" src="http://img.users.51.la/18852966.asp" style="border:none" /></a></noscript>
-</div>
+
+<body>
+	<div id="box">
+		<h1>hello world!</h1>
+	</div>
+	<div style="display: none;">
+		<script type="text/javascript">
+			var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://"); document.write(unescape("%3Cspan id='cnzz_stat_icon_1258926714'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s11.cnzz.com/z_stat.php%3Fid%3D1258926714%26show%3Dpic' type='text/javascript'%3E%3C/script%3E"));
+		</script>
+		<script language="javascript" type="text/javascript" src="http://js.users.51.la/18852966.js"></script>
+		<noscript><a href="http://www.51.la/?18852966" target="_blank"><img
+					alt="&#x6211;&#x8981;&#x5566;&#x514D;&#x8D39;&#x7EDF;&#x8BA1;"
+					src="http://img.users.51.la/18852966.asp" style="border:none" /></a></noscript>
+	</div>
 </body>
+
 </html>
